# Spoutnik-Language

./: .gitignore  README.md  dune-project  little_tests.txt  test.sptk
lib/: ast.ml  dune  infer.ml  lexer.mll  parser.mly  pcfast.ml  pcflex.mll  pcfparse.mly  pcfsem.ml  semantics.ml  simplify.ml  subst.ml  subst.mli  types.ml  types.mli  unify.ml  unify.mli
test/: dune
