(lang dune 3.7)

(name spoutnik)

(source
 (github coding-is-overrated/projet_in213))

(authors "Vincent Bittard")

(license MIT)

(package
 (name spoutnik)
 ;(synopsis "A short synopsis")
 ;(description "A longer description")
 (depends ocaml dune)
 ;(tags
 ;(topics "to describe" your project))
 )
